# flash-attention-rdna3

./: .comfyignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish-comfy-registry.yml
bench/: backward_d64_sweep.py  backward_sweep.py  benchmark.py  config_sweep.py  decode_benchmark.py  gemm_ceiling.py  noncausal_d64_sweep.py  paged_decode_benchmark.py  tiny_inference.py
fa_rdna3/: __init__.py  _validation.py  comfyui.py  interface.py  kernels.py  sdpa.py
fa_rdna3/kernels/: __init__.py  _common.py  backward.py  decode.py  forward.py  paged.py  tiny.py  varlen.py
tests/: test_alibi.py  test_autotune.py  test_backward.py  test_bias.py  test_causal_align.py  test_comfyui.py  test_decode.py  test_dropout.py  test_forward.py  test_fp32_headdim.py  test_gqa.py  test_paged.py  test_sdpa_dispatch.py  test_sdpa_patch.py  test_softcap.py  test_tiny.py  test_torch_library.py  test_validation.py  test_varlen.py  test_varlen_mods.py  test_window.py
