[project]
name = "fa-rdna3"
version = "0.1.0"
description = "FlashAttention-2 Triton kernel for AMD RDNA3 (gfx1100 / Radeon RX 7900 XT/XTX/GRE)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["torch>=2.5", "triton>=3.0"]

[project.optional-dependencies]
test = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fa_rdna3*"]
